Found and fixed the 'ITALICS' format bug.

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -35,7 +35,6 @@
       <p>{{ metadata.description }}</p>
         </em> <br/>Browse my topics 
        <a href="https://tatll.me/tags/">here</a> </p>
-        <p><em><br/>This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a>. 
         
       </div>
       <!-- Stop deleting -->
@@ -43,7 +42,10 @@
       {{ content | safe }}
     </main>
 
-    <footer></footer>
+    <footer>
+        <p><br/>This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a></p>. 
+    
+    </footer>
 
     <!-- Current page: {{ page.url | url }} -->
   </body>
