--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -52,7 +52,7 @@
     <p>See <a href="{{ '/posts/' | url }}">all posts</a>.</p>
 
     <div class=warning>
-        If you discover these notes and find them useful I would love to hear from you at [Little Furnace](https://littlefurnace.com).  Most of these are related to travel I did, books I read, or tech notes for Matomo and the LAMP stack.</p>.
+        If you discover these notes and find them useful I would love to hear from you at [Little Furnace](https://littlefurnace.com).</p>.
     </div>
     <p>This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a></p>        
     </footer>
