--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,16 +14,14 @@
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
 
-<!-- Matomo 1234-->
-<script src="/css/matomoscript.js"></script>
-<!-- End Matomo Code 1234-->
-
-
+    <!-- Matomo 1234-->
+    <script src="/css/matomoscript.js"></script>
+    <!-- End Matomo Code 1234-->
   </head>
+
   <body>
     <header>
       <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
-
       {#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
       <ul class="nav">
       {%- for entry in collections.all | eleventyNavigation %}
@@ -40,17 +38,14 @@
 
        </em>
       <!-- EM element closing tag to fix formatting BUG -->
-      
-        
+         
       </div>
-
       {{ content | safe }}
     </main>
 
-    <footer>
+    <footer class=home>
     <p>See <a href="https://tatll.me/tags/">all topics</a> </p>
     <p>See <a href="{{ '/posts/' | url }}">all posts</a>.</p>
-
     <div class=warning>
         If you discover these notes and find them useful I would love to hear from you at <a href="https://littlefurnace.com/">Little Furnace</a>   
     </div>
