--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -43,13 +43,15 @@
       {{ content | safe }}
     </main>
 
-    <footer class=home>
-    <p>See <a href="https://tatll.me/tags/">all topics</a> </p>
-    <p>See <a href="{{ '/posts/' | url }}">all posts</a>.</p>
-    <div class=warning>
-        If you discover these notes and find them useful I would love to hear from you at <a href="https://littlefurnace.com/">Little Furnace</a>   
+    <footer >
+    <div class=hackborder>
+      <p>See <a href="https://tatll.me/tags/">all topics</a> </p>
+      <p>See <a href="{{ '/posts/' | url }}">all posts</a>.</p>
+        <div class=warning>
+          If you discover these notes and find them useful I would love to hear from you at <a href="https://littlefurnace.com/">Little Furnace</a>   
+        </div>
+      <p>This started out just as me seeing how does a JAM stack generate a static site. That was several years ago. This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a></p>        
     </div>
-    <p>This started out just as me seeing how does a JAM stack generate a static site. That was several years ago. This is an <a href="https://www.11ty.dev/">Eleventy project</a> created from the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code> repo</a></p>        
     </footer>
 
     <!-- Current page: {{ page.url | url }} -->
